--- a/hugo.toml
+++ b/hugo.toml
@@ -55,7 +55,7 @@ src = "img/UK_traffic_sign_625.1.svg.png"
 
 [languages]
     [languages.en]
-    contentDir = 'content/en'
+    contentDir = 'content/'
     languageName = 'English'
     weight = 10
 
